--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+	background-color: black;
+}
+
 .transitions {
 	white-space: nowrap;
 	position: relative;
