--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@
 
 body {
 	background-color: black;
+	overflow-x: hidden;
+	@apply scrollbar-thin scrollbar-thumb-[#3b1e7f] scrollbar-thumb-rounded-xl;
 }
 * {
 	scroll-behavior: smooth;
